local-minicube-docker/k8s-django-app.yml
apiVersion : apps/v1
kind: Deployment
metadata:
  name: django-k8s
  labels:
    app: django-app
    tier: django
spec:
  replicas: 2
  selector:
    matchLabels:
      app: django-k8s
  template:
    metadata:
      labels:
        app: django-k8s
    spec:
      containers:
        - name : django-app
          image: django-app:latest
          ports:
            - containerPort: 80
          imagePullPolicy: IfNotPresent
---
apiVersion: v1
kind: Service
metadata: 
  name: django-service
spec:
  selector:   
    app: django-k8s
  type: ClusterIP
  ports: 
    - name: tcp-port
      port: 80
      targetPort: 80
      protocol: TCP
